fix some layout bugs on home and application form

--- a/client/src/components/Home.scss
+++ b/client/src/components/Home.scss
@@ -207,7 +207,7 @@
   margin: 8% 0;
   position: absolute;
   top: 75vh;
-  left: 50%;
+  left: 48.3%;
   z-index: 1;
 
   .scroll-down {
@@ -240,7 +240,7 @@
 .begin-search {
   position: absolute;
   top: 75vh;
-  left: 47.5%;
+  left: 45.7%;
   color: black;
   background-color: white;
   padding: 20px 30px;
